[tool]
[tool.poetry]
name = "inari"
version = "0.1.2"
description = "Write docstrings in Markdown!"
license = "MIT"
authors = ["T.Kameyama <tkamenoko@vivaldi.net>"]
readme = "README.md"

homepage = "https://tkamenoko.github.io/inari"
repository = "https://github.com/tkamenoko/inari"
documentation = "https://tkamenoko.github.io/inari"

keywords = ["mkdocs", "documentation", "docstrings"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Environment :: Plugins",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.scripts]
inari = 'inari.cli:run'

[tool.poetry.plugins]
[tool.poetry.plugins."mkdocs.plugins"]
inari = "inari.mkdocs_plugin:Plugin"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = { optional = true, version = "^1.1.2" }
[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
rope = "^0.18.0"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.6"
black = "^20.8b1"
poethepoet = "^0.9.0"
[tool.poetry.extras]
mkdocs = ["mkdocs"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
build = "mkdocs build"
serve = "mkdocs serve"
