[tool]
[tool.poetry]
name = "inari"
version = "0.1.2"
description = "Write docstrings in Markdown!"
license = "MIT"
authors = ["T.Kameyama <tkamenoko@vivaldi.net>"]
readme = "README.md"

homepage = "https://tkamenoko.github.io/inari"
repository = "https://github.com/tkamenoko/inari"
documentation = "https://tkamenoko.github.io/inari"

keywords = ["mkdocs", "documentation", "docstrings"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Environment :: Plugins",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.scripts]
inari = 'inari.cli:run'

[tool.poetry.plugins]
[tool.poetry.plugins."mkdocs.plugins"]
inari = "inari.mkdocs_plugin:Plugin"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = { optional=true, version="^1.1.2" }
[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
rope = "^0.19.0"
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.9"
black = "^21.6b0"
poethepoet = "^0.10.0"
[tool.poetry.extras]
mkdocs = ["mkdocs"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
build = "mkdocs build"
serve = "mkdocs serve"
types = "mypy ./inari/"
lint = "flake8 --max-line-length 88 ./inari/"
fmt = "black ./inari/"
